samples/_failures_safe/1761501224_c598b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11ab0a47.c: In function ‘main’:
./samples/SAFE/__tmp_11ab0a47.c:153:17: error: expected expression at end of input
  153 |                 if (multiply_matrices(&a, &b,
      |                 ^~
./samples/SAFE/__tmp_11ab0a47.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11ab0a47.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11ab0a47.c:153:17: error: expected declaration or statement at end of input
